--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,9 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+  box-sizing:border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -15,7 +17,11 @@ body {
   background-repeat: repeat-x;
   display: flex;
   justify-content: center;
+  width: 100%;
+  padding: 60px 0px;
 }
+
+
 
 section{
   padding:20px;
@@ -35,21 +41,23 @@ section{
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  padding-bottom: 15px;
 }
 
 #login-button{
-  width:120px;
-  height: 50px;
-  background-color:#3A82Cb;
+  width:110px;
+  height: 45px;
+  background-color:#4f80b0;
   color:white;
   font-weight: bold;
   font-size: 1.1rem;
-  border: 2px solid #06365f ;
+  border: 1px solid #06365f ;
   padding-left:5%;
   display:flex;
   justify-content: center;
   align-items: center;
   border-radius:5px;
+  
 
 }
 
@@ -73,6 +81,9 @@ article h2{
   justify-content: flex-start;
   padding: 0 40px;
 }
+#foot-menu img{
+  margin-right: 20px;;
+}
 
 #boldword{
   font-weight: bold;
@@ -87,6 +98,7 @@ footer{
 footer p{
   color:gray;
   padding-left: 15px;
+  
 }
 footer ul{
   display: flex;
@@ -100,6 +112,74 @@ footer ul li{
   list-style: none;
   font-weight: 500;
   text-transform: uppercase;
+  font-size: 0.9rem;
 }
 
 
+@media (max-width: 992px){
+  #left-section{
+  display: none;
+  }
+
+  #container{
+    padding:30px 0px;
+  }
+
+  #right-section{
+    width: 500px;
+  }
+
+  footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  footer ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding:10px;
+  }
+}
+
+@media (max-width: 600px){
+  #left-section{
+  display: none;
+  }
+
+  #container{
+    padding:0px;
+  }
+
+  #right-section{
+    width: 100%;
+  }
+
+  #top-menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-bottom: 15px;
+  }
+  footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  footer ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding:10px;
+ 
+  }
+}
+  
+  
