--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-image: url("https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/bgtile.png");
+  background-image: url("../images/bgtile.png");
   background-repeat: repeat-x;
 }
 
@@ -58,7 +58,7 @@ main {
 }
 
 .square {
-  background-image: url("https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/frame.png");
+  background-image: url("../images/frame.png");
   background-size: 600px;
   background-repeat: no-repeat;
 }
