--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,9 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flexbox;
+  align-items: center;
+  border: 2px solid violet;
 }
 
 #container{
@@ -14,6 +17,8 @@ body {
   background-repeat: repeat-x;
   display: flex;
   justify-content: center;
+
+  
   border: 5px solid red;
 }
 
@@ -27,30 +32,39 @@ body {
 .instagram-image {
   display: flex;
   justify-content: space-between;
-  padding-right: 30px;
+  align-items: center;
+  width: 600px;
   border: 5px solid orange;
 }
 
 .instagram-text {
+  display:flexbox;
+  width: min-content;
  border: 5px solid black;
- padding-top: 95px;
+ padding-top: 80px;
 }
 
 
 
 .button {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   background-color:#1c5380;
   color: white;
   height:50px;
-  width: 100px;
-  border: 2px solid yellow;
+  width: 120px;
+  background: linear-gradient(to top,#1c5380, #6e9abe);
+  border: 2px solid #06365f;
   
 }
 .capture {
+  display: flexbox;
   background-color: white;
   border-top:20px #06365f ;
-  border:2px solid grey;
-  padding-right: 150px;
+  border-radius: 5px;
+  border:2px solid yellow;
+  padding-right: 125px;
   padding-left: 50px;
   
 }
@@ -58,6 +72,10 @@ h2 {
   color:#06365f;
   
   border: 2px solid pink;
+}
+.Instagram-is{
+
+  border: 1px solid black;
 }
 
 .take-a-picture {
@@ -68,10 +86,11 @@ h2 {
 .stores{
   display:flex;
   justify-content: space-around;
-  padding-right: 250px;
+  padding-right: 210px;
   padding-left: 45px;
   padding-bottom: 10px;
   padding-top: 2px;
+  width:350px;
   border: 2px solid violet;
 }
 
@@ -79,14 +98,21 @@ ul {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding-left: 200px;
-  padding-right: 200px;
+  list-style: none;
+  padding-top:20px;
+  padding-bottom: 20px;
+  margin-left: 600px;
   font-size: 10px;
+  width: 700px;
   border: 2px solid black;
 }
 li {
+  display: flexbox;
+  align-items: center;
   color:#1c5380;
   font-weight: bold;
+  font-size: 10px;
+  border: 2px solid blue;
 }
 
 .copy {
