--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,103 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+/*preguntar por esta notavcion*/
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("/images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin: 110px auto 0;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin: 0 auto;
+  }
+
+  footer p {
+    color:
+  }
+
+footer ul {
+  display: flex;
+}
+
+li {
+  margin: 0 5px;
+  list-style: none;
+}
+
+li a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color:#1c5380;
+  font-weight: bold;
+}
+
+#description {
+  background: url("/images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 40px;
+}
+
+#description h1 {
+  color: #06365f;
+  line-height: 1.2;
+  margin-bottom: 40px;
+}
+
+#brand-login {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+#cellphone {
+  margin: 0 50px;
+  }
+
+#download-buttons {
+  padding: 0 40px;
+}
+
+#download-buttons img {
+  margin-right: 12px;
+}
+
+#button {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-image: -webkit-linear-gradient(top, #6f97b6, #3f729b);   
+  color: #fff;
+  border: 1px solid #1c5380;
+  border-radius: 3px;
+  height: 43px;
+  width: 100px;
+  font-weight: bold;
+  margin-left: 10px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), inset 1px 0 0 rgba(255,255,255,0.05), inset -1px 0 0 rgba(255,255,255,0.05), inset 0 1px 0 rgba(255, 255, 255, 0.1);
+}
+#button:active {
+ background-image: -webkit-linear-gradient(top,  #3f729b,#6f97b6);    
+border: 1px solid #133856;
+box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.15), inset 0 0 1px rgba(0, 0, 0, 0.15), 0 1px 0 rgba(255, 255, 255, 0.2);
 }
