--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,130 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+/* MAIN ELEMENTS */
 body {
+  box-sizing: border-box;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+h2 {
+  color: #06365f;
+}
+
+#background img {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 30%;
+  z-index: -1;
+}
+
+#whole-content {
+  display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+  margin: 5rem auto 0;
+  width: 80%;
+  height: 32rem;
+}
+
+.phones img {
+  width: 20rem;
+  height: 31rem;
+  position: relative;
+    bottom: 1.75rem;
+    left: 3rem;
+}
+
+.main-content {
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+  width: 40%;
+}
+
+.header {
+  display: flex;
+    align-items: center;
+    justify-content: space-between;
+  margin-left: 0.5rem;
+}
+
+.header img[src="images/brand.png"] {
+  width: 80%;
+}
+
+.header img[src="images/home.png"] {
+  width: 30%;
+  margin-right: 0.5rem;
+}
+
+.header button {
+  background-color: rgb(28,83,128, 0.2);
+  border: 0.1rem solid rgba(6, 54, 95, 0.2);
+  border-radius: 0.2rem;
+  color: white;
+  display: flex;
+    align-items: center;
+  height: 2.5rem;
+  font-size: 0.75rem;
+  font-weight: bold;
+  padding: auto 1.5rem;
+}
+
+.content {
+  background-image: url('../images/frame.png');
+  background-size: cover;
+  height: 20rem;
+  padding-left: 2rem;
+}
+
+.content p {
+  font-weight: bolder;
+}
+
+.downloads {
+  display: flex;
+    justify-content: flex-start;
+  margin-top: 2rem;
+}
+
+.downloads img {
+  width: 35%;
+  margin-right: 1rem;
+}
+
+/* FOOTER  */
+footer {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer ul {
+  display: flex;
+    justify-content: center;
+  list-style: none;
+  margin: 1.5rem;
+}
+
+footer li {
+  margin: 0.5rem;
+}
+
+footer a {
+  color: #1c5380;
+  font-size: smaller;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+footer p {
+  color: lightgray;
+  font-size: smaller;
+  font-weight: bold;
+  text-transform: uppercase;
 }
