--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,153 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 90%;
+}
+
+header {
+  width: 75%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  justify-content: center;
+}
+
+.phones img {
+  width: 80%;
+}
+
+.principal {
+  width: 60%;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 55%;
+}
+
+.home {
+  width: 25%;
+}
+
+.log {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+button {
+  width: 20%;
+  height: 35px;
+  color: #c5d2df;
+  font-size: 0.8em;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.34) 11%,
+    rgba(0, 0, 0, 0.39418470024728647) 96%
+  );
+  border-radius: 4px;
+  border: #3a658b 2px solid;
+  box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+button:active {
+  width: 20%;
+  height: 35px;
+  color: #c5d2df;
+  font-size: 0.8em;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.39418470024728647) 11%,
+    rgba(255, 255, 255, 0.34) 96%
+  );
+  border-radius: 4px;
+  border: #3a658b 2px solid;
+  box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.capture {
+  padding: 10px 30px;
+  background-image: url(../images/frame.png);
+  background-size: 96%;
+  background-repeat: no-repeat;
+  width: 90%;
+  border-radius: 5px;
+}
+
+h2 {
+  width: 75%;
+  color: #06365f;
+}
+
+.capture p {
+  font-size: 0.9em;
+}
+
+.store {
+  width: 130px;
+  padding: 0 10px 0 0;
+}
+
+ul {
+  margin: 40px 0 30px 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  list-style-type: none;
+  text-transform: capitalize;
+  color: #1c5380;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
+ul :last-child {
+  color: lightgray;
+}
+
+footer {
+  width: 50%;
+}
+
+@media (max-width: 600px) {
+  body {
+    height: 100%;
+  }
+
+  .button {
+    width: 20%;
+    height: 35px;
+  }
+
+  .phones img {
+    display: none;
+  }
+
+  ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
