--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,85 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('./../images/bgtile.png');
+  background-repeat: repeat-x;
+}
+
+h1 {
+  font-style: #06365f;
+  font-size: 24px;
+}
+
+.biggest-container {
+  display : flex;
+  align-items: center;
+  justify-content: center;
+  margin: 100px 145px 50px 365px;
+}
+
+.left-photos {
+  margin-right: 60px;
+}
+
+.rightside {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0 30px 0 30px;
+  margin: 0 189px 0 0;
+}
+
+.mini-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.article {
+  background-image: url('./../images/frame.png');
+  background-repeat: no-repeat;
+  object-fit: cover;
+  padding-top: 20px;
+  border-radius: 18px;
+}
+
+.item:nth-child(4) {
+  margin-top: 10px;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #1c5380;  
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.line {
+  margin-right: 20px;
+  font-weight: 600;
+}
+
+.line:last-child {
+  color: rgb(109, 109, 109);
+}
+
+#log-in-btn {
+  margin: 20px 0;
+  text-align: center;
+  font: bold;
+  font-weight: 600;
+  color: #c3d7e6;
+  background: linear-gradient(#7199b9, #517ea7);
+  
+}
+.item {
+  margin-left: 25px;
+}
+#badge-img {
+  margin: 35px 15px 0 0px;
+}
+
+span {
+  font-weight : bold;
 }
