--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,7 @@
 
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0px;
+  font-family: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: white;
   background-image:url(/images/bgtile.png);
   background-repeat:repeat-x;
@@ -16,7 +15,7 @@ body {
   }
 
   .back-colour{
-    background: #1c5380;
+   background: #1c5380;
   }
 
    .mobiles-section{
@@ -45,7 +44,7 @@ body {
 
 .login{
   background-color: #1c5380;;
-  padding: 10px 40px;
+  padding: 20px 40px;
   text-decoration: none;
   font-size: 21px;
   color: white;
