--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,19 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin:0;
+  padding:0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: repeating-linear-gradient(
+    #1c5380 0px,
+    #06365f 30%,
+    white 30%,
+    white 100%
+  );
+
 }
