--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ body {
   color: white;
   width: 100px;
   text-align: right;
-  border-radius: 5px;
+  /*border-radius: 5px; */
   border-color: black;
   box-shadow: 2px 2px 2px 0 rgb(53, 50, 50);
 }
