--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ body {
   width: 100px;
   text-align: right;
   /*border-radius: 5px; */
-  border-color: black;
+  /*border-color: black; */
   box-shadow: 2px 2px 2px 0 rgb(53, 50, 50);
 }
 
