--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ body {
   text-align: right;
   /*border-radius: 5px; */
   /*border-color: black; */
-  box-shadow: 2px 2px 2px 0 rgb(53, 50, 50);
+  box-shadow: 2px 2px 2px 2px rgb(53, 50, 50);
 }
 
 .Home{
