--- a/styles/style.css
+++ b/styles/style.css
@@ -51,8 +51,8 @@ body {
   width: 100px;
   text-align: right;
   /*border-radius: 5px; */
-  /*border-color: black; */
-  box-sizing: 8px 8px 8px 8px rgb(10, 10, 10);
+  border-color:8px 8px 8px 8px black; */
+  /*box-sizing: 8px 8px 8px 8px rgb(10, 10, 10);*/
 }
 
 .Home{
