--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ body {
 
   .back-colour{
    background: #1c5380;
+   background: linear-gradient(margin-bottom, #1c5380, #7593ac)
   }
 
    .mobiles-section{
@@ -51,12 +52,8 @@ body {
   width: 100px;
   text-align: right;
   /*border-radius: 5px; */
-  border-color:8px 8px 8px 8px black; */
+  border-color:8px 8px 8px 8px black;
   /*box-sizing: 8px 8px 8px 8px rgb(10, 10, 10);*/
-}
-
-.Home{
-  padding:0px;
 }
 
 
