--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ body {
 
   .back-colour{
    background: #1c5380;
-   background: linear-gradient(margin-bottom, #1c5380, #7593ac)
+   background: linear-gradient(bottom, #1c5380, #7593ac)
   }
 
    .mobiles-section{
