--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ body {
   height:10px;
   text-align: right;
   /*border-radius: 5px; */
-  border-color:8px 8px 8px 8px black;
+  /*border-color:8px 8px 8px 8px black;*/
   /*box-sizing: 8px 8px 8px 8px rgb(10, 10, 10);*/
 }
 
@@ -106,6 +106,6 @@ nav ul li a{
   color:#1c5380;
 }
 
-#nav ul li a .Copyright{
+nav ul li a .Copyright{
   color:gray;
 }
