--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ body {
   height:10px;
   text-align: right;
   /*border-radius: 5px; */
-  /*border-color:8px 8px 8px 8px black;*/
+  border-color:8px 8px 8px 8px black;
   /*box-sizing: 8px 8px 8px 8px rgb(10, 10, 10);*/
 }
 
