--- a/styles/style.css
+++ b/styles/style.css
@@ -36,3 +36,27 @@ main {
   padding: 50px;
   border-radius: 10px;
 }
+
+.description-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#img-phone{
+  width: 50%;
+  height: auto;
+}
+
+#login{
+  color: white;
+  font-weight: 500;
+  text-decoration: none;
+  background-color: #1c5380;
+  border: 1px solid #06365f;
+  width: 80px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 3px;
+}
