--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body {
 
   .back-colour{
    background: #1c5380;
-   background: linear-gradient (90deg, #2e5f86,#1c5380;)
+   background: linear-gradient(#78a0c2,#1c5380);
   }
 
    .mobiles-section{
