--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: white;
+  background-color: white;577494
   background-image:url(/images/bgtile.png);
   background-repeat:repeat-x;
   display: flex;
@@ -15,7 +15,7 @@ body {
 
   .back-colour{
    background: #1c5380;
-   background: linear-gradient(#3d8fd3,#1c5380);
+   background: linear-gradient(#577494,#326088);
   }
 
    .mobiles-section{
@@ -43,7 +43,8 @@ body {
   }
   
   .login{
-  background-color: #1c5380;;
+  background-color: #1c5380;
+  background-color: linear-gradient(#577494,#326088);
   padding: 20px 20px;
   text-decoration: none;
   font-size: 21px;
