--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ body {
   }
   
   .login{
-  background-color: #1c5380;
+  background-color: #326088;
   background-color: linear-gradient(#577494,#326088);
   padding: 20px 20px;
   text-decoration: none;
