--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ body {
   
   .login{
   background: #326088;
-  background: linear-gradient(#577494,#326088);
+  background: linear-gradient(#608bad,#43759d);
   padding: 20px 20px;
   text-decoration: none;
   font-size: 21px;
